--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,50 @@
     <name>xspring</name>
     <packaging>war</packaging>
     <version>1.0.0-SNAPSHOT</version>
+
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <filters>
+                    <filter>${project.basedir}/src/main/resources/env/dev/config.properties</filter>
+                </filters>
+            </build>
+        </profile>
+
+        <profile>
+            <id>test</id>
+            <build>
+                <filters>
+                    <filter>${project.basedir}/src/main/resources/env/test/config.properties</filter>
+                </filters>
+            </build>
+        </profile>
+
+        <profile>
+            <id>beta</id>
+            <build>
+                <filters>
+                    <filter>${project.basedir}/src/main/resources/env/beta/config.properties</filter>
+                </filters>
+            </build>
+        </profile>
+
+        <profile>
+            <id>release</id>
+            <build>
+                <filters>
+                    <filter>${project.basedir}/src/main/resources/env/release/config.properties</filter>
+                </filters>
+            </build>
+        </profile>
+
+    </profiles>
+
     <properties>
         <java-version>1.6</java-version>
         <org.springframework-version>4.2.5.RELEASE</org.springframework-version>
@@ -126,6 +170,20 @@
         </dependency>
     </dependencies>
     <build>
+       <finalName>xpring</finalName>
+
+        <resources>
+            <resource>
+                <!-- resources目录下的所有文件都进行过滤 -->
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <excludes>
+                    <!-- 排除env目录 -->
+                    <exclude>env/**/*</exclude>
+                </excludes>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
