--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,14 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath*:spring/mvc/servlet-context.xml</param-value>
 		</init-param>
+		<init-param>
+			<param-name>detectAllHandlerMappings</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<init-param>
+			<param-name>detectAllHandlerAdapters</param-name>
+			<param-value>false</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 		
