--- a/pom.xml
+++ b/pom.xml
@@ -60,20 +60,20 @@
     </properties>
     <dependencies>
 
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-releasetrain</artifactId>
-            <version>Fowler-SR2</version>
-            <scope>import</scope>
-            <type>pom</type>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-dependencies</artifactId>
-            <version>1.4.0.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
+        <!--  <dependency>
+             <groupId>org.springframework.data</groupId>
+             <artifactId>spring-data-releasetrain</artifactId>
+             <version>Fowler-SR2</version>
+             <scope>import</scope>
+             <type>pom</type>
+         </dependency>
+         <dependency>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-dependencies</artifactId>
+             <version>1.4.0.RELEASE</version>
+             <type>pom</type>
+             <scope>import</scope>
+         </dependency> -->
 
         <dependency>
             <groupId>net.yanrc.web</groupId>
@@ -240,7 +240,7 @@
                 <version>2.1</version>
                 <configuration>
                     <path>/</path>
-                    <port>8080</port>
+                    <port>9090</port>
                     <uriEncoding>utf-8</uriEncoding>
                 </configuration>
             </plugin>
@@ -293,6 +293,24 @@
                 <configuration>
                     <mainClass>org.test.int1.Main</mainClass>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <configurationFile>src/main/config/code_gen/generatorConfig.xml</configurationFile>
+                            <overwrite>true</overwrite>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
