--- a/src/main/resources/env/dev/config.properties
+++ b/src/main/resources/env/dev/config.properties
@@ -1,7 +1,7 @@
 x.user.name=dev_name
 x.user.psd=dev-psd
 
-redis.host=10.165.124.96
+redis.host=127.0.0.1
 redis.port=6379
-redis.password=Gachadev
+redis.password=redis
 redis.database=0
