--- a/src/main/resources/env/test/config.properties
+++ b/src/main/resources/env/test/config.properties
@@ -1,2 +1,7 @@
-x.user.name=release_name
-x.user.psd=release-psd
+x.user.name=dev_name
+x.user.psd=dev-psd
+
+redis.host=192.168.99.143
+redis.port=6379
+redis.password=redis
+redis.database=0
