--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,21 @@
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <org.slf4j-version>1.7.21</org.slf4j-version>
         <faster.jackson>2.7.3</faster.jackson>
+        <hystrix.version>1.5.6</hystrix.version>  <!--1.3.16-->
+        <!--<hystrix-metrics-event-stream.version>1.1.2</hystrix-metrics-event-stream.version>-->
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
+            <version>${hystrix.version}</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.netflix.hystrix</groupId>-->
+            <!--<artifactId>hystrix-metrics-event-stream</artifactId>-->
+            <!--<version>${hystrix-metrics-event-stream.version}</version>-->
+        <!--</dependency>-->
 
         <!--  <dependency>
              <groupId>org.springframework.data</groupId>
@@ -79,7 +92,7 @@
         <dependency>
             <groupId>net.yanrc.web</groupId>
             <artifactId>yanrc_common</artifactId>
-            <version>1.0.33</version>
+            <version>1.0.34</version>
         </dependency>
 
         <!-- redis -->
