--- a/pom.xml
+++ b/pom.xml
@@ -59,20 +59,30 @@
         <org.slf4j-version>1.7.21</org.slf4j-version>
         <faster.jackson>2.7.3</faster.jackson>
         <hystrix.version>1.5.6</hystrix.version>  <!--1.3.16-->
-        <!--<hystrix-metrics-event-stream.version>1.1.2</hystrix-metrics-event-stream.version>-->
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.3.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
             <version>${hystrix.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.netflix.hystrix</groupId>-->
-            <!--<artifactId>hystrix-metrics-event-stream</artifactId>-->
-            <!--<version>${hystrix-metrics-event-stream.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-metrics-event-stream</artifactId>
+            <version>${hystrix.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-serialization</artifactId>
+            <version>${hystrix.version}</version>
+        </dependency>
 
         <!--  <dependency>
              <groupId>org.springframework.data</groupId>
@@ -88,7 +98,6 @@
              <type>pom</type>
              <scope>import</scope>
          </dependency> -->
-
         <dependency>
             <groupId>net.yanrc.web</groupId>
             <artifactId>yanrc_common</artifactId>
