--- a/service/src/main/resources/spring.properties
+++ b/service/src/main/resources/spring.properties
@@ -1,5 +1,5 @@
 #jdbc
-jdbc.url=jdbc:mysql://localhost:3306/xspring?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://${jdbc.host}:${jdbc.port}/xspring?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf-8
 jdbc.name=root
 jdbc.psd=mysql
 jdbc.max.active=200
