--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -326,10 +326,10 @@
         </resources>
 
         <plugins>
-            <plugin>
+           <!-- <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
