--- a/service/src/main/resources/env/test/config.properties
+++ b/service/src/main/resources/env/test/config.properties
@@ -6,4 +6,9 @@ redis.port=6379
 redis.password=redis
 redis.database=0
 
-dubbo.host=192.168.99.143:2181
+jdbc.host=localhost
+jdbc.port=3306
+
+dubbo.registry = zookeeper://192.168.99.143:2181
+dubbo.port = 2000
+dubbo.host =
