--- a/web/src/main/resources/env/dev/config.properties
+++ b/web/src/main/resources/env/dev/config.properties
@@ -1,7 +1,1 @@
-x.user.name=dev_name
-x.user.psd=dev-psd
-
-redis.host=127.0.0.1
-redis.port=6379
-redis.password=redis
-redis.database=0
+dubbo.registry = zookeeper://127.0.0.1:2181
