--- a/web/src/main/resources/env/test/config.properties
+++ b/web/src/main/resources/env/test/config.properties
@@ -1,7 +1,1 @@
-x.user.name=dev_name
-x.user.psd=dev-psd
-
-redis.host=192.168.99.143
-redis.port=6379
-redis.password=redis
-redis.database=0
+dubbo.registry = zookeeper://192.168.99.143:2181
