--- a/web/src/main/resources/spring.properties
+++ b/web/src/main/resources/spring.properties
@@ -1,24 +1,2 @@
-#jdbc
-jdbc.url=jdbc:mysql://localhost:3306/xspring?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf-8
-jdbc.name=root
-jdbc.psd=mysql
-jdbc.max.active=200
-jdbc.initial.size=10
-
-
-#redis
-redis.host=${redis.host}
-redis.port=${redis.port}
-redis.password=${redis.password}
-redis.database=0
-#redis 通用配置
-redis.timeout=10000
-redis.pool.maxTotal=1024
-redis.pool.maxIdle=200
-redis.pool.maxWaitMillis=3000
-redis.pool.testOnBorrow=true
-redis.pool.testOnReturn=true
-
-
-user.name=${x.user.name}
-user.psd=${x.user.psd}
+#dubbo
+dubbo.registry = ${dubbo.registry}
