--- a/service/src/main/resources/spring.properties
+++ b/service/src/main/resources/spring.properties
@@ -19,7 +19,7 @@ redis.pool.maxWaitMillis=3000
 redis.pool.testOnBorrow=true
 redis.pool.testOnReturn=true
 
-dubbo.host=${dubbo.host}
+dubbo.registry=${dubbo.registry}
 
 
 user.name=${x.user.name}
