--- a/service/src/main/resources/spring.properties
+++ b/service/src/main/resources/spring.properties
@@ -20,6 +20,8 @@ redis.pool.testOnBorrow=true
 redis.pool.testOnReturn=true
 
 dubbo.registry=${dubbo.registry}
+dubbo.port=${dubbo.port}
+dubbo.host="${dubbo.host}"
 
 
 user.name=${x.user.name}
