--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring/bean/root-context.xml</param-value>
+        <param-value>classpath*:spring/root-context.xml</param-value>
     </context-param>
 
     <!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -38,7 +38,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:spring/mvc/servlet-context.xml</param-value>
+            <param-value>classpath*:spring/servlet-context.xml</param-value>
         </init-param>
         <init-param>
             <param-name>detectAllHandlerMappings</param-name>
