--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -25,10 +25,21 @@
             <version>4.3.2</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>org.htmlparser</groupId>-->
+            <!--<artifactId>htmllexer</artifactId>-->
+            <!--<version>2.1</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>com.netflix.archaius</groupId>
             <artifactId>archaius-core</artifactId>
-            <version>0.7.5</version>
+            <version>0.6.6</version> <!--0.7.5-->
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.archaius</groupId>
+            <artifactId>archaius-zookeeper</artifactId>
+            <version>0.6.6</version>
         </dependency>
 
         <dependency>
