--- a/web/pom.xml
+++ b/web/pom.xml
@@ -137,16 +137,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.5.1</version>
+                <!--<version>2.5.1</version>-->
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
                     <encoding>utf-8</encoding>
-                    <compilerArgument>-Xlint:all</compilerArgument>
+                    <!--<compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
+                    <showDeprecation>true</showDeprecation>-->
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
