--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -17,7 +17,7 @@
         <faster.jackson>2.7.3</faster.jackson>
         <hystrix.version>1.5.6</hystrix.version>  <!--1.3.16-->
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -26,9 +26,9 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.htmlparser</groupId>-->
-            <!--<artifactId>htmllexer</artifactId>-->
-            <!--<version>2.1</version>-->
+        <!--<groupId>org.htmlparser</groupId>-->
+        <!--<artifactId>htmllexer</artifactId>-->
+        <!--<version>2.1</version>-->
         <!--</dependency>-->
 
         <dependency>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.4.6</version>
+            <version>3.5.2-alpha</version>
         </dependency>
 
         <dependency>
@@ -97,12 +97,19 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>2.11.0</version>
+            <version>2.11.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-client</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>2.11.0</version>
+            <version>2.11.1</version>
         </dependency>
 
 
@@ -355,10 +362,10 @@
         </resources>
 
         <plugins>
-           <!-- <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>-->
+            <!-- <plugin>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-maven-plugin</artifactId>
+             </plugin>-->
 
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
