--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,11 +6,29 @@
     <artifactId>xpring-common</artifactId>
     <name>xpring::common</name>
     <packaging>jar</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <parent>
         <groupId>net.yanrc</groupId>
         <artifactId>xpring-parent</artifactId>
         <version>1.0.0</version>
         <relativePath>../parent</relativePath>
     </parent>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf-8</encoding>
+                    <!--<compilerArgument>-Xlint:all</compilerArgument>-->
+                    <!--<showWarnings>true</showWarnings>-->
+                    <!--<showDeprecation>true</showDeprecation>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
