搭框架：动态配置

--- a/bundle/config/pom.xml
+++ b/bundle/config/pom.xml
@@ -3,16 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.yanrc</groupId>
-    <artifactId>xpring-common</artifactId>
-    <name>xpring::common</name>
+    <artifactId>config-api</artifactId>
+    <name>config:api</name>
     <packaging>jar</packaging>
     <version>1.0.1-SNAPSHOT</version>
     <parent>
         <groupId>net.yanrc</groupId>
         <artifactId>xpring-parent</artifactId>
         <version>1.0.0</version>
-        <relativePath>../parent</relativePath>
-    </parent> 
+    </parent>
 
     <build>
         <plugins>
