--- a/module/act-server/pom.xml
+++ b/module/act-server/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.yanrc</groupId>
-    <artifactId>xpring-web</artifactId>
-    <name>xpring::web</name>
+    <artifactId>act-server</artifactId>
+    <name>act::server</name>
     <packaging>war</packaging>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <parent>
         <groupId>net.yanrc</groupId>
         <artifactId>xpring-parent</artifactId>
         <version>1.0.0</version>
-        <relativePath>../parent</relativePath>
+        <relativePath>../../parent</relativePath>
     </parent>
+
 
     <profiles>
         <profile>
@@ -23,7 +23,7 @@
             </activation>
             <build>
                 <filters>
-                    <filter>${project.basedir}/src/main/resources/env/dev/env_config.properties</filter>
+                    <filter>${project.basedir}/src/main/resources/env/dev/config.properties</filter>
                 </filters>
             </build>
         </profile>
@@ -32,7 +32,7 @@
             <id>test</id>
             <build>
                 <filters>
-                    <filter>${project.basedir}/src/main/resources/env/test/env_config.properties</filter>
+                    <filter>${project.basedir}/src/main/resources/env/test/config.properties</filter>
                 </filters>
             </build>
         </profile>
@@ -41,7 +41,7 @@
             <id>beta</id>
             <build>
                 <filters>
-                    <filter>${project.basedir}/src/main/resources/env/beta/env_config.properties</filter>
+                    <filter>${project.basedir}/src/main/resources/env/beta/config.properties</filter>
                 </filters>
             </build>
         </profile>
@@ -50,10 +50,11 @@
             <id>release</id>
             <build>
                 <filters>
-                    <filter>${project.basedir}/src/main/resources/env/release/env_config.properties</filter>
+                    <filter>${project.basedir}/src/main/resources/env/release/config.properties</filter>
                 </filters>
             </build>
         </profile>
+
     </profiles>
 
     <dependencies>
@@ -70,7 +71,7 @@
     </dependencies>
 
     <build>
-        <finalName>xpring-web</finalName>
+        <finalName>xpring-server</finalName>
 
         <resources>
             <resource>
@@ -95,7 +96,7 @@
                 <version>2.1</version>
                 <configuration>
                     <path>/</path>
-                    <port>8090</port>
+                    <port>8089</port>
                     <uriEncoding>utf-8</uriEncoding>
                 </configuration>
             </plugin>
@@ -106,7 +107,7 @@
                 <version>9.2.10.v20150310</version>
                 <configuration>
                     <httpConnector>
-                        <port>8090</port>
+                        <port>8080</port>
                     </httpConnector>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webApp>
@@ -142,24 +143,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <!--<version>2.5.1</version>-->
                 <version>3.5.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>utf-8</encoding>
-                    <!--<compilerArgument>-Xlint:all</compilerArgument>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>-->
+                    <!--<compilerArgument>-Xlint:all</compilerArgument>-->
+                    <!--<showWarnings>true</showWarnings>-->
+                    <!--<showDeprecation>true</showDeprecation>-->
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.6</version>
-            </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
