--- a/module/pom.xml
+++ b/module/pom.xml
@@ -3,16 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.yanrc</groupId>
-    <artifactId>xpring-all</artifactId>
+    <artifactId>xpring-module</artifactId>
     <name>xpring::all</name>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
-        <module>./parent</module>
-        <module>./common</module>
-        <module>./bundle</module>
-        <module>./module</module>
-        <module>./web</module>
+        <module>./act-server</module>
+        <module>./config-server</module>
     </modules>
 
 </project>
