增加动态配置

--- a/bundle/config/pom.xml
+++ b/bundle/config/pom.xml
@@ -11,6 +11,7 @@
         <groupId>net.yanrc</groupId>
         <artifactId>xpring-parent</artifactId>
         <version>1.0.0</version>
+        <relativePath>../../parent</relativePath>
     </parent>
 
     <build>
