搭框架：动态配置

--- a/bundle/act/pom.xml
+++ b/bundle/act/pom.xml
@@ -13,6 +13,15 @@
         <version>1.0.0</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.yanrc</groupId>
+            <artifactId>xpring-common</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
