搭框架：动态配置

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -337,7 +337,7 @@
             <version>${faster.jackson}</version>
         </dependency>
 
-        <!-- Test -->
+        <!-- net.yanrc.xpring.rpc.service.Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
