增加动态配置

--- a/module/config-server/src/main/resources/env/test/config.properties
+++ b/module/config-server/src/main/resources/env/test/config.properties
@@ -10,5 +10,5 @@ jdbc.host=localhost
 jdbc.port=3306
 
 dubbo.registry = zookeeper://192.168.99.143:2181
-dubbo.port = 20980
-dubbo.host = 10.241.0.196
+dubbo.port = 20780
+dubbo.host = localhost
