增加动态配置

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>./bundle</module>
         <module>./module</module>
         <module>./web</module>
+        <module>./gateway</module>
     </modules>
 
 </project>
