--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,11 @@
         <module>./zuul-gateway</module>
         <module>./zuul-movie</module>
         <module>./eureka-simple/compute-service</module>
+        <module>./eureka-simple/compute-service2</module>
         <module>./eureka-simple/eureka-server</module>
+        <module>./eureka-simple/eureka-ribbon</module>
+        <module>./eureka-simple/eureka-feign</module>
+
         <module>./eureka-cluster/api-gateway</module>
         <module>./eureka-cluster/eureka-server</module>
         <module>./eureka-cluster/service-A</module>
