--- a/module/act-server/src/main/resources/spring.properties
+++ b/module/act-server/src/main/resources/spring.properties
@@ -1,11 +1,9 @@
 #jdbc
-jdbc.url=jdbc:mysql://${jdbc.host}:${jdbc.port}/xspring?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf-8
-jdbc.name=root
-jdbc.psd=mysql
-jdbc.max.active=200
-jdbc.initial.size=10
-
-
+jdbc.url=jdbc:mysql://${jdbc.host}:${jdbc.port}/xspring?autoReconnect=true&autoCommit=false&useSSL=false&useUnicode=true&characterEncoding=utf-8
+jdbc.name=${jdbc.name}
+jdbc.psd=${jdbc.psd}
+jdbc.max.active=${jdbc.max.active}
+jdbc.initial.size=${jdbc.initial.size}
 #redis
 redis.host=${redis.host}
 redis.port=${redis.port}
@@ -18,11 +16,8 @@ redis.pool.maxIdle=200
 redis.pool.maxWaitMillis=3000
 redis.pool.testOnBorrow=true
 redis.pool.testOnReturn=true
-
 dubbo.registry=${dubbo.registry}
 dubbo.port=${dubbo.port}
 dubbo.host="${dubbo.host}"
-
-
 user.name=${x.user.name}
 user.psd=${x.user.psd}
