--- a/module/act-server/src/main/resources/env/test/config.properties
+++ b/module/act-server/src/main/resources/env/test/config.properties
@@ -1,14 +1,15 @@
 x.user.name=dev_name
 x.user.psd=dev-psd
-
 redis.host=192.168.99.143
 redis.port=6379
 redis.password=redis
 redis.database=0
-
 jdbc.host=localhost
 jdbc.port=3306
-
-dubbo.registry = zookeeper://192.168.99.143:2181
-dubbo.port = 2000
-dubbo.host =
+jdbc.name=root
+jdbc.psd=mysql
+jdbc.max.active=200
+jdbc.initial.size=10
+dubbo.registry=zookeeper://192.168.99.143:2181
+dubbo.port=2000
+dubbo.host=
