--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -396,6 +396,12 @@
             <!--<version>5.2</version>-->
         </dependency>
 
+        <!--<dependency>-->
+        <!--<groupId>com.mangofactory</groupId>-->
+        <!--<artifactId>swagger-springmvc</artifactId>-->
+        <!--<version>1.0.2</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
     <build>
